--- a/src/webui/_locales/my/messages.json
+++ b/src/webui/_locales/my/messages.json
@@ -768,7 +768,7 @@
         "description": "Label on a button. Clicking this button will buy 1 day (24 hours) of Speed Boost."
     },
     "psicash#1-week": {
-        "message": "1 week",
+        "message": "1 ပတ်",
         "description": "Label on a button. Clicking this button will buy 1 week (7 days) of Speed Boost."
     },
     "psicash#1-month": {
